--- a/_includes/manuals/3.3/1.2_release_notes.md
+++ b/_includes/manuals/3.3/1.2_release_notes.md
@@ -38,23 +38,22 @@ We've updated our browsers compatibility to support the following:
 
 ### Release notes for 3.3.0
 #### Foreman
-* Support EC (and other non-RSA) keys in foreman core ([#34843](https://projects.theforeman.org/issues/34843))
-* Remove Share your feedback link in new host page
- ([#34841](https://projects.theforeman.org/issues/34841))
-* Add host page reports tab  ([#34782](https://projects.theforeman.org/issues/34782))
+* Support EC (and other non-RSA) keys in Foreman core ([#34843](https://projects.theforeman.org/issues/34843))
+* Remove the **Share your feedback** link from the new host details page ([#34841](https://projects.theforeman.org/issues/34841))
+* Add a reports tab to the hosts details page ([#34782](https://projects.theforeman.org/issues/34782))
 * Add developer documentation for pagelets ([#34544](https://projects.theforeman.org/issues/34544))
-* Host list page should show the host comment ([#34516](https://projects.theforeman.org/issues/34516))
-* Host list page should show the owner of the host ([#34515](https://projects.theforeman.org/issues/34515))
+* Include the host comments to a host list page ([#34516](https://projects.theforeman.org/issues/34516))
+* Include the host's owner to a host list page ([#34515](https://projects.theforeman.org/issues/34515))
 
 #### Foreman - API
-* Taxonomies api dont accept per_page all ([#34748](https://projects.theforeman.org/issues/34748))
+* Taxonomies api does not accept per_page all ([#34748](https://projects.theforeman.org/issues/34748))
 * Refactor handling of External IPAM response ([#34714](https://projects.theforeman.org/issues/34714))
 * Turn off caching for apipie in production ([#34643](https://projects.theforeman.org/issues/34643))
 * Improve GraphQL association resolving ([#34557](https://projects.theforeman.org/issues/34557))
 * Add import_ipv4_subnets to API ([#34251](https://projects.theforeman.org/issues/34251))
 
 #### Foreman - Audit Log
-* Add rake that print out documentation of Auditable attributes ([#34690](https://projects.theforeman.org/issues/34690))
+* Add rake command that prints out documentation for Auditable attributes ([#34690](https://projects.theforeman.org/issues/34690))
 * PF4 bookmarks and search field ([#34546](https://projects.theforeman.org/issues/34546))
 
 #### Foreman - Authentication
@@ -73,6 +72,9 @@ We've updated our browsers compatibility to support the following:
 #### Foreman - Compute resources - VMware
 * Latest Hardware version for VMware vSphere 7.0 U2 and U3 is not available ([#34499](https://projects.theforeman.org/issues/34499))
 * CentOS9 and RHEL9 Guest OS are missing  ([#34498](https://projects.theforeman.org/issues/34498))
+
+#### Foreman - DB migrations
+* Pending migrations check in seeds does not take plugins into consideration ([#34913](https://projects.theforeman.org/issues/34913))
 
 #### Foreman - Dashboard
 * Setting all_out_of_sync_disabled has no definition warning ([#34240](https://projects.theforeman.org/issues/34240))
@@ -94,24 +96,24 @@ We've updated our browsers compatibility to support the following:
 * Registration migration with nil template ([#34661](https://projects.theforeman.org/issues/34661))
 
 #### Foreman - Inventory
-* Submit button on Edit page of a host will revert back to a invalid page on Satellite ([#34830](https://projects.theforeman.org/issues/34830))
+* Submit button on Edit page of a host will revert back to a invalid page on Foreman ([#34830](https://projects.theforeman.org/issues/34830))
 * Submit button on host form redirects to invalid page ([#34572](https://projects.theforeman.org/issues/34572))
 * Expose reported data in the API ([#34391](https://projects.theforeman.org/issues/34391))
 
 #### Foreman - JavaScript stack
-* show error when using node 16+ ([#34857](https://projects.theforeman.org/issues/34857))
+* Show error when using node 16+ ([#34857](https://projects.theforeman.org/issues/34857))
 * Fix slots in system properties card ([#34815](https://projects.theforeman.org/issues/34815))
 * New host detail page - sentence case fixes ([#34798](https://projects.theforeman.org/issues/34798))
 * new host detail page - Fix host status card alignment ([#34755](https://projects.theforeman.org/issues/34755))
 * Adding host parameters clears the values of the prior line ([#34747](https://projects.theforeman.org/issues/34747))
 * Better handling when no key is passed to API middleware ([#34745](https://projects.theforeman.org/issues/34745))
-* Remove pf3 OverlayTrigger ([#34713](https://projects.theforeman.org/issues/34713))
+* Remove PatternFly 3 OverlayTrigger ([#34713](https://projects.theforeman.org/issues/34713))
 * Use hostFriendlyId and hostName props for host ActionBar component ([#34673](https://projects.theforeman.org/issues/34673))
 * Provide helpers for dealing with global IDs returned by graphql queries ([#34614](https://projects.theforeman.org/issues/34614))
 * Remove pagination deprecations ([#34580](https://projects.theforeman.org/issues/34580))
 * Add ouiaId on components for easier testing ([#34542](https://projects.theforeman.org/issues/34542))
 * Update to the latest foreman-js ([#34481](https://projects.theforeman.org/issues/34481))
-* Create pf4 breadcrumb switcher ([#34290](https://projects.theforeman.org/issues/34290))
+* Create PatternFly 4 breadcrumb switcher ([#34290](https://projects.theforeman.org/issues/34290))
 * useAPI infinite loop ([#33236](https://projects.theforeman.org/issues/33236))
 
 #### Foreman - Organizations and Locations
@@ -126,12 +128,12 @@ We've updated our browsers compatibility to support the following:
 #### Foreman - Rails
 * Upgrade Rails to 6.0.4.7 ([#34649](https://projects.theforeman.org/issues/34649))
 * Move initialization from application.rb into initializer ([#34646](https://projects.theforeman.org/issues/34646))
-* order description syntax does not read right with Maruku ([#34634](https://projects.theforeman.org/issues/34634))
+* Order description syntax does not read right with Maruku ([#34634](https://projects.theforeman.org/issues/34634))
 * SettingPresenter - pass kwarks in Ruby 3 compatible format ([#34570](https://projects.theforeman.org/issues/34570))
 * Postpone LookupValue match validations ([#34569](https://projects.theforeman.org/issues/34569))
 * Switch Rails version to 6.1 ([#34526](https://projects.theforeman.org/issues/34526))
 * Add support for Rails 6.1 ([#34500](https://projects.theforeman.org/issues/34500))
-* remove usage of force_ssl in controller ([#30122](https://projects.theforeman.org/issues/30122))
+* Remove usage of force_ssl in controller ([#30122](https://projects.theforeman.org/issues/30122))
 
 #### Foreman - Reporting
 * Remove reports deprecation from develop and 3.2 ([#34744](https://projects.theforeman.org/issues/34744))
@@ -150,8 +152,7 @@ We've updated our browsers compatibility to support the following:
 * Move setting value collections to SettingPresenter ([#30861](https://projects.theforeman.org/issues/30861))
 
 #### Foreman - Statistics
-* Host - Last Checkin report template is not showing any other content host apart from Red Hat Satellite itself.
- ([#34809](https://projects.theforeman.org/issues/34809))
+* Host - Last Checkin report template is not showing any other content host apart from Foreman itself. ([#34809](https://projects.theforeman.org/issues/34809))
 
 #### Foreman - TFTP
 * "Kickstart default user data" Provisioning Template contains doubled description key
@@ -168,7 +169,7 @@ We've updated our browsers compatibility to support the following:
 * Support unattented partitionning using crypto under Debian ([#34307](https://projects.theforeman.org/issues/34307))
 * Add driverdisk support to kickstart templates ([#33938](https://projects.theforeman.org/issues/33938))
 * Cannot change "local boot ipxe template" ([#33937](https://projects.theforeman.org/issues/33937))
-* templates - vgname is hardcoded to vg_sda ([#33930](https://projects.theforeman.org/issues/33930))
+* Templates - vgname is hardcoded to vg_sda ([#33930](https://projects.theforeman.org/issues/33930))
 * Add DSL autocompletion in templates ([#32035](https://projects.theforeman.org/issues/32035))
 * Request to add UEFI Grub2 for SLES/SUSE ([#20265](https://projects.theforeman.org/issues/20265))
 
@@ -179,10 +180,10 @@ We've updated our browsers compatibility to support the following:
 #### Foreman - Unattended installations
 * Default boot template names ([#34596](https://projects.theforeman.org/issues/34596))
 * Trigger ansible provisioning callback for Preseed based installs ([#34558](https://projects.theforeman.org/issues/34558))
-* Use systemd based ansible callback on Ubuntu &gt;= 15 and Debian &gt;= 8 ([#34553](https://projects.theforeman.org/issues/34553))
+* Use systemd based Ansible callback on Ubuntu &gt;= 15 and Debian &gt;= 8 ([#34553](https://projects.theforeman.org/issues/34553))
 
 #### Foreman - Users, Roles and Permissions
-* Infer of permission name for isolated namespace controllers doesnt work ([#34506](https://projects.theforeman.org/issues/34506))
+* The authorized_for doesn't work for isolated namespace engines ([#34506](https://projects.theforeman.org/issues/34506))
 
 #### Foreman - Web Interface
 * Change host status icon to green ([#34831](https://projects.theforeman.org/issues/34831))
@@ -192,7 +193,7 @@ We've updated our browsers compatibility to support the following:
 * Add pagelet mountpoints for hosts list table ([#34543](https://projects.theforeman.org/issues/34543))
 * Add breadcrumbs switcher to new host page ([#34511](https://projects.theforeman.org/issues/34511))
 * Breadcrumb switcher doesn't work with katello content ([#34495](https://projects.theforeman.org/issues/34495))
-* close bookmarks dropdown after selecting a bookmark ([#34228](https://projects.theforeman.org/issues/34228))
+* Close bookmarks dropdown after selecting a bookmark ([#34228](https://projects.theforeman.org/issues/34228))
 * New host detail page shows IP address over multiple lines ([#33948](https://projects.theforeman.org/issues/33948))
 * Add details Tab to the host details page ([#33010](https://projects.theforeman.org/issues/33010))
 * Refactor PageLayout to use PF4 components ([#32991](https://projects.theforeman.org/issues/32991))
@@ -207,26 +208,24 @@ We've updated our browsers compatibility to support the following:
 * Add resource information to download command ([PR #598](https://github.com/theforeman/hammer-cli-foreman/pull/598)), [#34621](http://projects.theforeman.org/issues/34621)
 * Add command to import ipv4 subnet from smart proxy ([PR #593](https://github.com/theforeman/hammer-cli-foreman/pull/593)), [#33255](http://projects.theforeman.org/issues/33255)
 
-
 #### Installer
-* installer spams with katello-certs-check output when using custom certs
- ([#34888](https://projects.theforeman.org/issues/34888))
-* display the mismatched FQDN additionally rather than just showing the commands to verify the output ([#34883](https://projects.theforeman.org/issues/34883))
+* Installer spams with katello-certs-check output when using custom certs ([#34888](https://projects.theforeman.org/issues/34888))
+* Display the mismatched FQDN additionally rather than just showing the commands to verify the output ([#34883](https://projects.theforeman.org/issues/34883))
 * Pulp: Add options to change the import and export path in  /etc/pulp/settings.py ([#34882](https://projects.theforeman.org/issues/34882))
 * Resetting nssdb certificate does not update private key and breaks Qpid ([#34860](https://projects.theforeman.org/issues/34860))
-* installer does not restart foreman.service when changing puma configuration ([#34824](https://projects.theforeman.org/issues/34824))
+* Installer does not restart foreman.service when changing Puma configuration ([#34824](https://projects.theforeman.org/issues/34824))
 * Puppet Agent enabled in Katello installations, even if it should not ([#34819](https://projects.theforeman.org/issues/34819))
 * Rename foreman_proxy::plugin::remote_execution::ssh to foreman_proxy::plugin::remote_execution::script ([#34758](https://projects.theforeman.org/issues/34758))
 * After upgrading to Katello 4.0+ ping check fails with "Some components are failing: katello_agent"
  ([#34708](https://projects.theforeman.org/issues/34708))
 * --reset-data does not remove /var/lib/candlepin/.puppet-candlepin-rpm-version ([#34686](https://projects.theforeman.org/issues/34686))
 * Drop apipie cache generation and indexing ([#34640](https://projects.theforeman.org/issues/34640))
-* detect plugin installation and trigger puma restart ([#34602](https://projects.theforeman.org/issues/34602))
+* Detect plugin installation and trigger Puma restart ([#34602](https://projects.theforeman.org/issues/34602))
 * Keytool does not work on FIPS enabled EL 8 ([#34598](https://projects.theforeman.org/issues/34598))
 * Add hammer-cli-foreman-host-reports to the installer ([#34505](https://projects.theforeman.org/issues/34505))
 * Add support for REX pull transport ([#34239](https://projects.theforeman.org/issues/34239))
 * Warning: postgresql.service changed on disk. Run 'systemctl daemon-reload' to reload units. ([#32323](https://projects.theforeman.org/issues/32323))
-* make it possible to install Foreman's httpd with mpm_event ([#20889](https://projects.theforeman.org/issues/20889))
+* Make it possible to install Foreman's httpd with mpm_event ([#20889](https://projects.theforeman.org/issues/20889))
 
 #### Installer - Foreman modules
 * OS upgrade keeps original TFTP setup preventing machines to boot from the network ([#34774](https://projects.theforeman.org/issues/34774))
@@ -240,11 +239,11 @@ We've updated our browsers compatibility to support the following:
 * Drop apipie cache generation from RPM builds ([#34641](https://projects.theforeman.org/issues/34641))
 
 #### Packaging - Debian/Ubuntu
-* Should update oauth Gem installed by puppet-agent-oauth under Debian to a newer version (0.5.1 produces lots of warnings about URI.escape) ([#34681](https://projects.theforeman.org/issues/34681))
+* Updates oauth Gem installed by puppet-agent-oauth under Debian to a newer version (0.5.1 produces lots of warnings about URI.escape) ([#34681](https://projects.theforeman.org/issues/34681))
 
 #### Packaging - RPMs
 * foreman.rpm pulls in nodejs ([#34507](https://projects.theforeman.org/issues/34507))
-* instaler uses hostname, but that package can be absent ([#34468](https://projects.theforeman.org/issues/34468))
+* Installer uses hostname, but that package can be absent ([#34468](https://projects.theforeman.org/issues/34468))
 
 #### SELinux - Plugins
 * Drop foreman_docker compatibility ([#34730](https://projects.theforeman.org/issues/34730))
