foreman-release.rpm install: Always use -y
This was a bit inconsistent across the different versions:

```
bastelfreak@bastelfreak-nb ~/code/theforeman.org $ git grep 'dnf install https:'
_includes/manuals/3.4/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
_includes/manuals/3.5/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
_includes/manuals/3.6/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
_includes/manuals/3.7/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
_includes/manuals/3.8/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
_includes/manuals/nightly/3.3.1_rpm_packages.md:    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
bastelfreak@bastelfreak-nb ~/code/theforeman.org $ git grep 'dnf -y install https:'
_includes/manuals/1.12/2.1_quickstart_installation.md:dnf -y install https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm
_includes/manuals/1.13/2.1_quickstart_installation.md:dnf -y install https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm
_includes/manuals/1.14/2.1_quickstart_installation.md:dnf -y install https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm
_includes/manuals/1.15/2.1_quickstart_installation.md:dnf -y install https://yum.theforeman.org/releases/{{page.version}}/f24/x86_64/foreman-release.rpm
_includes/manuals/3.3/2.1_quickstart_installation.md:sudo dnf -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
_includes/manuals/3.3/2.1_quickstart_installation.md:sudo dnf -y install https://yum.theforeman.org/releases/{{page.vers

--- a/_includes/manuals/3.4/3.3.1_rpm_packages.md
+++ b/_includes/manuals/3.4/3.3.1_rpm_packages.md
@@ -26,7 +26,7 @@ Under each repo are directories for each distribution, then each architecture.
 To set up the repository, foreman-release packages are provided which add a repo definition to `/etc/yum.repos.d`. Install the release RPM and enable the module:
 
     # EL8
-    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
+    dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
     dnf -y module enable foreman:el8
 
 ### Signing
