--- a/_includes/manuals/3.8/3.3.1_rpm_packages.md
+++ b/_includes/manuals/3.8/3.3.1_rpm_packages.md
@@ -26,7 +26,7 @@ Under each repo are directories for each distribution, then each architecture.
 To set up the repository, foreman-release packages are provided which add a repo definition to `/etc/yum.repos.d`. Install the release RPM and enable the module:
 
     # EL8
-    dnf install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
+    dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86_64/foreman-release.rpm
     dnf -y module enable foreman:el8
 
 ### Signing
